<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/list_item_height"
    android:gravity="center">

        <TextView
            android:id="@+id/lac"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/lac" />
        <TextView
            android:id="@+id/cell_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/cell_id" />

        <TextView
            android:id="@+id/bcch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/bcch" />

        <TextView
            android:id="@+id/bsic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/bsic" />

        <TextView
            android:id="@+id/rssi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/rssi" />

</LinearLayout>
