<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/cu_gsm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cu_gsm" />

    <Button
        android:id="@+id/wcdma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wcdma" />

    <Button
        android:id="@+id/cu_lte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cu_lte" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
