<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/cmcc_gsm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmcc_gsm" />

    <Button
        android:id="@+id/tdscdma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tdscdma" />

    <Button
        android:id="@+id/cmcc_lte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmcc_lte" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
